// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Dropdown /> > should allow to render menu inside another element 1`] = `
<div>
  <div
    id="menu-container"
  >
    <div
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      id="junipero-dropdown-_r_b_-menu"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <li
          class="junipero dropdown-item"
          id="junipero-dropdown-item-_r_f_"
          tabindex="0"
        >
          Item 1
        </li>
      </ul>
    </div>
  </div>
  <div
    class="junipero dropdown opened"
    id="junipero-dropdown-_r_b_"
  >
    <span
      aria-autocomplete="none"
      aria-controls="junipero-dropdown-_r_b_-menu"
      aria-expanded="true"
      aria-haspopup="listbox"
      class="dropdown-toggle opened"
      dir="ltr"
      id="junipero-dropdown-toggle-_r_c_"
      role="combobox"
    >
      Click me
    </span>
  </div>
</div>
`;

exports[`<Dropdown /> > should allow to use groups 1`] = `
<div>
  <div
    class="junipero dropdown opened"
    id="junipero-dropdown-_r_h_"
  >
    <span
      aria-autocomplete="none"
      aria-controls="junipero-dropdown-_r_h_-menu"
      aria-expanded="true"
      aria-haspopup="listbox"
      class="dropdown-toggle opened"
      dir="ltr"
      id="junipero-dropdown-toggle-_r_i_"
      role="combobox"
    >
      Click me
    </span>
    <div
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      id="junipero-dropdown-_r_h_-menu"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="dropdown-group"
        >
          <div
            class="junipero extra group-title"
          >
            Group 1
          </div>
          <div
            class="options"
          >
            <li
              class="junipero dropdown-item"
              id="junipero-dropdown-item-_r_k_"
              tabindex="0"
            >
              Item 1
            </li>
            <li
              class="junipero dropdown-item"
              id="junipero-dropdown-item-_r_l_"
              tabindex="0"
            >
              Item 2
            </li>
          </div>
        </div>
        <div
          class="dropdown-group"
        >
          <div
            class="junipero extra group-title"
          >
            Group 2
          </div>
          <div
            class="options"
          >
            <li
              class="junipero dropdown-item"
              id="junipero-dropdown-item-_r_m_"
              tabindex="0"
            >
              Item 3
            </li>
            <li
              class="junipero dropdown-item"
              id="junipero-dropdown-item-_r_n_"
              tabindex="0"
            >
              Item 4
            </li>
          </div>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> > should auto close when disabled prop changes 1`] = `
<div>
  <div
    class="junipero dropdown opened"
    id="junipero-dropdown-_r_6_"
  >
    <span
      aria-autocomplete="none"
      aria-controls="junipero-dropdown-_r_6_-menu"
      aria-expanded="true"
      aria-haspopup="listbox"
      class="dropdown-toggle opened"
      dir="ltr"
      id="junipero-dropdown-toggle-_r_7_"
      role="combobox"
    >
      Click me
    </span>
    <div
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      id="junipero-dropdown-_r_6_-menu"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <li
          class="junipero dropdown-item"
          id="junipero-dropdown-item-_r_9_"
          tabindex="0"
        >
          Item 1
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> > should auto close when disabled prop changes 2`] = `
<div>
  <div
    class="junipero dropdown disabled"
    id="junipero-dropdown-_r_6_"
  >
    <span
      aria-autocomplete="none"
      aria-controls="junipero-dropdown-_r_6_-menu"
      aria-expanded="false"
      aria-haspopup="listbox"
      class="dropdown-toggle"
      dir="ltr"
      id="junipero-dropdown-toggle-_r_7_"
      role="combobox"
    >
      Click me
    </span>
  </div>
</div>
`;

exports[`<Dropdown /> > should render 1`] = `
<div>
  <div
    class="junipero dropdown"
    id="junipero-dropdown-_r_1_"
  >
    <span
      aria-autocomplete="none"
      aria-controls="junipero-dropdown-_r_1_-menu"
      aria-expanded="false"
      aria-haspopup="listbox"
      class="dropdown-toggle"
      dir="ltr"
      id="junipero-dropdown-toggle-_r_2_"
      role="combobox"
    >
      Click me
    </span>
  </div>
</div>
`;

exports[`<Dropdown /> > should render 2`] = `
<div>
  <div
    class="junipero dropdown opened"
    id="junipero-dropdown-_r_1_"
  >
    <span
      aria-autocomplete="none"
      aria-controls="junipero-dropdown-_r_1_-menu"
      aria-expanded="true"
      aria-haspopup="listbox"
      class="dropdown-toggle opened"
      dir="ltr"
      id="junipero-dropdown-toggle-_r_2_"
      role="combobox"
    >
      Click me
    </span>
    <div
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      id="junipero-dropdown-_r_1_-menu"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <li
          class="junipero dropdown-item"
          id="junipero-dropdown-item-_r_4_"
          tabindex="0"
        >
          Item 1
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`useDropdwon() > should allow to animate dropdown > Enter: In dom 1`] = `
<div>
  <div
    class="junipero dropdown opened"
    id="junipero-dropdown-_r_11_"
  >
    <span
      aria-autocomplete="none"
      aria-controls="junipero-dropdown-_r_11_-menu"
      aria-expanded="true"
      aria-haspopup="listbox"
      class="dropdown-toggle opened"
      dir="ltr"
      id="junipero-dropdown-toggle-_r_12_"
      role="combobox"
    >
      Click me
    </span>
    <div
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      id="junipero-dropdown-_r_11_-menu"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner jp-slide-in-down-menu-enter-done"
      >
        <li
          class="junipero dropdown-item"
          id="junipero-dropdown-item-_r_14_"
          tabindex="0"
        >
          Item 1
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`useDropdwon() > should allow to animate dropdown > Enter: Not in dom 1`] = `
<div>
  <div
    class="junipero dropdown"
    id="junipero-dropdown-_r_11_"
  >
    <span
      aria-autocomplete="none"
      aria-controls="junipero-dropdown-_r_11_-menu"
      aria-expanded="false"
      aria-haspopup="listbox"
      class="dropdown-toggle"
      dir="ltr"
      id="junipero-dropdown-toggle-_r_12_"
      role="combobox"
    >
      Click me
    </span>
  </div>
</div>
`;

exports[`useDropdwon() > should allow to animate dropdown > Exit: Not in dom 1`] = `
<div>
  <div
    class="junipero dropdown"
    id="junipero-dropdown-_r_11_"
  >
    <span
      aria-autocomplete="none"
      aria-controls="junipero-dropdown-_r_11_-menu"
      aria-expanded="false"
      aria-haspopup="listbox"
      class="dropdown-toggle"
      dir="ltr"
      id="junipero-dropdown-toggle-_r_12_"
      role="combobox"
    >
      Click me
    </span>
  </div>
</div>
`;

exports[`useDropdwon() > should keep the menu in dom when animated and apparition is css > Enter: Already in dom 1`] = `
<div>
  <div
    class="junipero dropdown"
    id="junipero-dropdown-_r_16_"
  >
    <span
      aria-autocomplete="none"
      aria-controls="junipero-dropdown-_r_16_-menu"
      aria-expanded="false"
      aria-haspopup="listbox"
      class="dropdown-toggle"
      dir="ltr"
      id="junipero-dropdown-toggle-_r_17_"
      role="combobox"
    >
      Click me
    </span>
    <div
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      id="junipero-dropdown-_r_16_-menu"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`useDropdwon() > should keep the menu in dom when animated and apparition is css > Enter: Still in dom 1`] = `
<div>
  <div
    class="junipero dropdown opened"
    id="junipero-dropdown-_r_16_"
  >
    <span
      aria-autocomplete="none"
      aria-controls="junipero-dropdown-_r_16_-menu"
      aria-expanded="true"
      aria-haspopup="listbox"
      class="dropdown-toggle opened"
      dir="ltr"
      id="junipero-dropdown-toggle-_r_17_"
      role="combobox"
    >
      Click me
    </span>
    <div
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      id="junipero-dropdown-_r_16_-menu"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner jp-slide-in-down-menu-enter-done"
      >
        <li
          class="junipero dropdown-item"
          id="junipero-dropdown-item-_r_19_"
          tabindex="0"
        >
          Item 1
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`useDropdwon() > should keep the menu in dom when animated and apparition is css > Exit: Still in dom 1`] = `
<div>
  <div
    class="junipero dropdown"
    id="junipero-dropdown-_r_16_"
  >
    <span
      aria-autocomplete="none"
      aria-controls="junipero-dropdown-_r_16_-menu"
      aria-expanded="false"
      aria-haspopup="listbox"
      class="dropdown-toggle"
      dir="ltr"
      id="junipero-dropdown-toggle-_r_17_"
      role="combobox"
    >
      Click me
    </span>
    <div
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      id="junipero-dropdown-_r_16_-menu"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    />
  </div>
</div>
`;
